# AirQuality

./: .gitignore  README.md  pyproject.toml
app/: aqi_utils.py  main.py  models.py  openaq.py  predictor.py
static/: app.js  index.html  style.css
